solved text alignment issue

--- a/css/index.css
+++ b/css/index.css
@@ -492,6 +492,7 @@ nav .links .btn-big:hover {
   align-content: center;
   padding: 2% 2%;
   border-radius: 14px;
+  text-align: center;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 26px 0 rgba(0, 0, 0, 0.33);
 }
 .boxes .box1 img {
